--- a/apps.html
+++ b/apps.html
@@ -71,39 +71,43 @@
                     rehberidir.
                 </p>
 
-                <div class="card-grid"
-                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 12px; margin-bottom: 30px;">
-                    <div class="glass-card"
-                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
-                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-                            <i class="fas fa-file-invoice-dollar" style="color: var(--accent); font-size: 20px;"></i>
-                            <h4 style="font-size: 15px; margin: 0;">Hesap Ekstresi Import</h4>
+                <div class="feature-list" style="margin-bottom: 35px;">
+                    <div class="feature-item" style="display: flex; gap: 20px; margin-bottom: 24px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(78, 226, 192, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-camera" style="color: var(--accent); font-size: 18px;"></i>
                         </div>
-                        <p
-                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
-                            Banka ekstrenizi import edin, harcamalarınızı otomatik kategorize edelim.
-                        </p>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">AI Fiş Tarama</h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">Yapay
+                                zeka ile fişlerinizdeki tutar ve tarih bilgilerini saniyeler içinde anında
+                                dijitalleştirin.</p>
+                        </div>
                     </div>
-                    <div class="glass-card"
-                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
-                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-                            <i class="fas fa-camera" style="color: var(--accent); font-size: 20px;"></i>
-                            <h4 style="font-size: 15px; margin: 0;">AI Fiş Tarama</h4>
+                    <div class="feature-item" style="display: flex; gap: 20px; margin-bottom: 24px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(78, 226, 192, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-file-invoice-dollar" style="color: var(--accent); font-size: 18px;"></i>
                         </div>
-                        <p
-                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
-                            Fişlerinizin fotoğrafını çekin, yapay zeka tutar ve tarihi anında dijitalleştirsin.
-                        </p>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">Hesap Ekstresi
+                                Import</h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">Banka
+                                ekstrelerinizi kolayca içeri aktarın ve harcamalarınızı otomatik olarak kategorize edin.
+                            </p>
+                        </div>
                     </div>
-                    <div class="glass-card"
-                        style="padding: 16px 20px; text-align: left; border-color: rgba(78, 226, 192, 0.15); height: 100%; display: flex; flex-direction: column;">
-                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 8px;">
-                            <i class="fas fa-lock" style="color: var(--accent); font-size: 20px;"></i>
-                            <h4 style="font-size: 15px; margin: 0;">Hassas Güvenlik</h4>
+                    <div class="feature-item" style="display: flex; gap: 20px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(78, 226, 192, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-lock" style="color: var(--accent); font-size: 18px;"></i>
                         </div>
-                        <p
-                            style="font-size: 13px; color: var(--text-muted); line-height: 1.5; margin: 0; flex-grow: 1;">
-                            Tüm verileriniz iCloud üzerinden şifreli şekilde senkronize edilir.</p>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">Hassas Güvenlik
+                            </h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">Tüm
+                                verileriniz Apple altyapısı ve iCloud ile uçtan uca şifreli şekilde korunur.</p>
+                        </div>
                     </div>
                 </div>
 
