--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -122,7 +122,8 @@
                     açıklamaları. Bu veriler sadece bütçe takibinizi yapabilmeniz için işlenir ve analiz edilir.</li>
                 <li><strong>Kamera ve Görüntüleme:</strong> Fiş tarama özelliği için kameranız kullanılır.
                     <strong>ÖNEMLİ:</strong> Bu görüntüleme tamamen cihaz üzerinde (On-Device OCR) gerçekleşir,
-                    fotoğraflarınız asla sunucularımıza yüklenmez veya saklanmaz.</li>
+                    fotoğraflarınız asla sunucularımıza yüklenmez veya saklanmaz.
+                </li>
             </ul>
 
             <h2>3. Verilerin Saklanması ve Güvenliği</h2>
@@ -152,8 +153,8 @@
 
             <h2>7. İletişim</h2>
             <p>Bu politika hakkında daha fazla bilgi almak veya sorularınızı iletmek için web sitemizi ziyaret edebilir
-                veya <a href="mailto:kaanska07@gmail.com"
-                    style="color: var(--accent); text-decoration: none;">kaanska07@gmail.com</a> adresinden
+                veya <a href="mailto:vyontoinfo@gmail.com"
+                    style="color: var(--accent); text-decoration: none;">vyontoinfo@gmail.com</a> adresinden
                 ulaşabilirsiniz.</p>
 
         </div>
