--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -101,7 +101,12 @@
             </a>
 
             <h1>Vynto - Gizlilik Politikası</h1>
-            <p>Son Güncelleme: 15 Ocak 2026</p>
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                <p style="margin: 0;">Son Güncelleme: 15 Ocak 2026</p>
+                <a href="terms-vynto"
+                    style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600;">Kullanım
+                    Koşulları</a>
+            </div>
 
             <p>Vynto ("Uygulama") olarak, kişisel verilerinizin güvenliği ve gizliliği bizim için en önemli önceliktir.
                 Bu Gizlilik Politikası, uygulamamızı kullandığınızda hangi verileri topladığımızı, bunları nasıl
