--- a/apps.html
+++ b/apps.html
@@ -116,12 +116,20 @@
                         App Store'dan İndir (Yakında)
                     </a>
                     <div style="margin-top: 15px;">
-                        <a href="privacy-vynto"
-                            style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
-                            onmouseover="this.style.color='var(--accent)'; this.style.borderColor='var(--accent)'"
-                            onmouseout="this.style.color='var(--text-muted)'; this.style.borderColor='rgba(255, 255, 255, 0.1)'">
-                            Gizlilik Politikası (Privacy Policy)
-                        </a>
+                        <div style="display: flex; justify-content: center; gap: 20px;">
+                            <a href="privacy-vynto"
+                                style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
+                                onmouseover="this.style.color='var(--accent)'; this.style.borderColor='var(--accent)'"
+                                onmouseout="this.style.color='var(--text-muted)'; this.style.borderColor='rgba(255, 255, 255, 0.1)'">
+                                Gizlilik Politikası
+                            </a>
+                            <a href="terms-vynto"
+                                style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
+                                onmouseover="this.style.color='var(--accent)'; this.style.borderColor='var(--accent)'"
+                                onmouseout="this.style.color='var(--text-muted)'; this.style.borderColor='rgba(255, 255, 255, 0.1)'">
+                                Kullanım Koşulları
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
