--- a/apps.html
+++ b/apps.html
@@ -112,8 +112,9 @@
                 </div>
 
                 <div style="text-align: center; margin-top: 20px;">
-                    <a href="#" class="btn-cta btn-pulse" style="display: inline-block; width: 100%; max-width: 400px;">
-                        App Store'dan İndir (Yakında)
+                    <a href="https://apps.apple.com/tr/app/vynto/id6758548802?l=tr" class="btn-cta btn-pulse"
+                        style="display: inline-block; width: 100%; max-width: 400px;">
+                        App Store'dan İndir
                     </a>
                     <div style="margin-top: 15px;">
                         <div style="display: flex; justify-content: center; gap: 20px;">
