--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -100,67 +100,54 @@
                 <i class="fas fa-arrow-left"></i> Uygulamalara Dön
             </a>
 
-            <h1>Vynto - Gizlilik Politikası</h1>
+            <h1>GİZLİLİK POLİTİKASI</h1>
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-                <p style="margin: 0;">Son Güncelleme: 15 Ocak 2026</p>
+                <p style="margin: 0;">Son Güncelleme: 7 Şubat 2026</p>
                 <a href="terms-vynto"
                     style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600;">Kullanım
                     Koşulları</a>
             </div>
 
-            <p>Vynto ("Uygulama") olarak, kişisel verilerinizin güvenliği ve gizliliği bizim için en önemli önceliktir.
-                Bu Gizlilik Politikası, uygulamamızı kullandığınızda hangi verileri topladığımızı, bunları nasıl
-                kullandığımızı ve verileriniz üzerindeki haklarınızı açıklar.</p>
+            <p>Vynto (Uygulama) olarak, kişisel verilerinizin güvenliği ve gizliliği bizim için en önemli önceliktir. Bu
+                Gizlilik Politikası, uygulamamızı kullandığınızda hangi verileri topladığımızı ve bunları nasıl
+                koruduğumuzu açıklar.</p>
 
             <h2>1. Veri Sorumlusu</h2>
-            <p>Vynto uygulamasının geliştiricisi ve veri sorumlusu Kaan Saka'dır. Sorularınız için <a
-                    href="https://kaansaka.com.tr"
-                    style="color: var(--accent); text-decoration: none;">kaansaka.com.tr</a> üzerinden iletişime
-                geçebilirsiniz.</p>
+            <p>Vynto platformunun veri sorumlusu Kaan Saka'dır. Resmi bildirimler ve veri talepleri için <a
+                    href="mailto:vyontoinfo@gmail.com"
+                    style="color: var(--accent); text-decoration: none;">vyontoinfo@gmail.com</a> kanalı üzerinden
+                iletişim sağlanabilir.</p>
 
-            <h2>2. Toplanan Veriler ve Amacı</h2>
-            <p>Uygulamayı tam fonksiyonel kullanabilmeniz için aşağıdaki veriler işlenmektedir:</p>
-            <ul>
-                <li><strong>Kimlik Bilgileri:</strong> Kayıt sırasında sağladığınız e-posta adresi ve kullanıcı adı. Bu
-                    bilgiler, hesabınızı oluşturmak ve cihazlar arası senkronizasyon sağlamak için kullanılır.</li>
-                <li><strong>Finansal Veriler:</strong> Uygulama içine girdiğiniz gelir, gider, borç ve işlem
-                    açıklamaları. Bu veriler sadece bütçe takibinizi yapabilmeniz için işlenir ve analiz edilir.</li>
-                <li><strong>Kamera ve Görüntüleme:</strong> Fiş tarama özelliği için kameranız kullanılır.
-                    <strong>ÖNEMLİ:</strong> Bu görüntüleme tamamen cihaz üzerinde (On-Device OCR) gerçekleşir,
-                    fotoğraflarınız asla sunucularımıza yüklenmez veya saklanmaz.
-                </li>
-            </ul>
+            <h2>2. Veri İşleme Amaçları</h2>
+            <p>Kullanıcı kaydı kapsamında temin edilen e-posta adresi ve kimlik verileri ile bütçe yönetimi dahilinde
+                işlenen tüm finansal veriler, yalnızca hizmetin ifası ve kullanıcı deneyiminin optimizasyonu amacıyla
+                sınırlı olarak işlenmektedir.</p>
 
-            <h2>3. Verilerin Saklanması ve Güvenliği</h2>
-            <p>Verileriniz, dünya standartlarında güvenlik sertifikalarına sahip güvenilir bulut hizmet sağlayıcılarının
-                altyapısında şifrelenmiş olarak saklanır. Finansal kayıtlarınıza sadece sizin hesabınız üzerinden
-                erişilebilir. Yetkisiz erişimleri engellemek için gelişmiş güvenlik protokolleri uygulanmaktadır.</p>
+            <h2>3. Bilgi Güvenliği Kontrolleri</h2>
+            <p>Uygulama kapsamında işlenen tüm veriler, küresel ölçekte kabul görmüş yüksek güvenlik standartlarına
+                sahip bulut altyapılarında muhafaza edilmektedir. Veri erişim yetkileri yalnızca hesap sahibi ile
+                sınırlıdır.</p>
 
-            <h2>4. Veri Paylaşımı</h2>
-            <p>Vynto, kullanıcı verilerini asla satmaz, kiralamaz ve reklam amaçlı üçüncü taraf şirketlerle paylaşmaz.
-                Verileriniz sadece uygulamanın çalışması için gerekli olan güvenilir bulut altyapı hizmeti
-                sağlayıcılarıyla güvenli protokoller üzerinden işlenir.</p>
+            <h2>4. Üçüncü Taraf İş İlişkileri</h2>
+            <p>Vynto, işlenen verilerin ticari amaçla satılmasını veya reklam faaliyetleri için üçüncü taraflarla
+                paylaşılmasını kesinlikle yasaklayan bir politika izler. Veri iletimi, yalnızca teknik operasyonların
+                sürdürülebilirliği adına asgari düzeyde gerçekleştirilir.</p>
 
-            <h2>5. Kullanıcı Hakları ve Hesap Silme</h2>
-            <p>Kullanıcılarımız, istedikleri zaman şu haklara sahiptir:</p>
-            <ul>
-                <li>Kayıtlı verilerini görüntüleme ve düzeltme.</li>
-                <li><strong>Hesabı ve Tüm Verileri Silme:</strong> Uygulama içerisindeki Profil > Hesap Yönetimi
-                    sekmesinden "Hesabımı Kalıcı Olarak Sil" butonuna basarak; e-posta bilginiz, işlemleriniz,
-                    borçlarınız ve tüm ayarlarınız dahil olmak üzere her şeyi kalıcı olarak silebilirsiniz. Bu işlem
-                    geri alınamaz ve tüm veriler bulut sunucularından anında temizlenir.</li>
-            </ul>
+            <h2>5. Mevcut Verilerin Tasfiyesi</h2>
+            <p>Kullanıcılar "Hesabımı Kalıcı Olarak Sil" opsiyonu aracılığıyla, platform üzerindeki tüm kişisel ve
+                finansal verilerinin anında ve geri döndürülemez şekilde tasfiye edilmesini talep etme hakkına sahiptir.
+            </p>
 
-            <h2>6. Üçüncü Taraf Servisler ve AI</h2>
-            <p>Uygulama, güncel döviz verilerini çekmek için API servislerini kullanabilir. Fiş tarama (AI Receipt
-                Scanning) işlemi Apple'ın yerel Vision teknolojisi ile tamamen cihazınızda yapılır; hiçbir görüntü veya
-                döküman verisi üçüncü taraflarla paylaşılmaz.</p>
+            <h2>6. Akıllı Veri Analizi</h2>
+            <p>Doküman ve ekstre analiz işlemleri sırasında, dijital varlıkların kendisi depolanmamakta; yalnızca ilgili
+                metin verileri yapay zeka modelleri aracılığıyla işleme tabi tutulmaktadır. Analiz sonuçları doğrudan
+                kullanıcı portalına aktarılmaktadır.</p>
 
-            <h2>7. İletişim</h2>
-            <p>Bu politika hakkında daha fazla bilgi almak veya sorularınızı iletmek için web sitemizi ziyaret edebilir
-                veya <a href="mailto:vyontoinfo@gmail.com"
-                    style="color: var(--accent); text-decoration: none;">vyontoinfo@gmail.com</a> adresinden
-                ulaşabilirsiniz.</p>
+            <h2>7. Kurumsal İletişim</h2>
+            <p>Politika detayları ve kurumsal veri yönetimi ile ilgili tüm sorularınız için <a
+                    href="mailto:vyontoinfo@gmail.com"
+                    style="color: var(--accent); text-decoration: none;">vyontoinfo@gmail.com</a> kurumsal e-posta
+                adresi üzerinden irtibat kurabilirsiniz.</p>
 
         </div>
     </main>
