Hide Privacy Policy and Terms of Use buttons from UI

--- a/apps.html
+++ b/apps.html
@@ -117,7 +117,7 @@
                         App Store'dan İndir
                     </a>
                     <div style="margin-top: 15px;">
-                        <div style="display: flex; justify-content: center; gap: 20px;">
+                        <div style="display: flex; justify-content: center; gap: 20px; display: none !important;">
                             <a href="privacy-vynto"
                                 style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
                                 onmouseover="this.style.color='var(--accent)'; this.style.borderColor='var(--accent)'"
