--- a/terms-vynto.html
+++ b/terms-vynto.html
@@ -94,7 +94,7 @@
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
                 <p style="margin: 0;">Son Güncelleme: 15 Ocak 2026</p>
                 <a href="privacy-vynto"
-                    style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600;">Gizlilik
+                    style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600; display: none !important;">Gizlilik
                     Politikası</a>
             </div>
 
