--- a/privacy-vynto.html
+++ b/privacy-vynto.html
@@ -104,7 +104,7 @@
             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
                 <p style="margin: 0;">Son Güncelleme: 7 Şubat 2026</p>
                 <a href="terms-vynto"
-                    style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600;">Kullanım
+                    style="color: var(--accent); text-decoration: none; font-size: 14px; font-weight: 600; display: none !important;">Kullanım
                     Koşulları</a>
             </div>
 
