--- a/apps.html
+++ b/apps.html
@@ -135,6 +135,89 @@
                 </div>
             </div>
         </section>
+
+        <!-- Syvn App Showcase -->
+        <section class="app-showcase animate" style="margin-top: 60px;">
+            <div class="app-images" style="flex: 1.2;">
+                <img src="images/syvn1.png" alt="Syvn App" class="app-img-diag-1" style="width: 250px;">
+                <img src="images/syvn2.png" alt="Syvn Multiplayer" class="app-img-diag-2" style="width: 250px;">
+            </div>
+            <div class="app-details" style="text-align: left; flex: 1;">
+                <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
+                    <i class="fab fa-apple" style="font-size: 40px; color: #d4af37;"></i>
+                    <span style="font-weight: 800; color: #d4af37; letter-spacing: 1px;">Sadece iOS İçin</span>
+                </div>
+                <h2 style="font-size: 64px; margin-bottom: 10px;">
+                    <span
+                        style="background: linear-gradient(135deg, #f9d423 0%, #d4af37 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">Syvn</span>
+                </h2>
+                <p
+                    style="color: #d4af37; font-weight: 800; text-transform: uppercase; letter-spacing: 4px; font-size: 14px; margin-bottom: 30px;">
+                    Minimal Kart Oyunu
+                </p>
+
+                <p style="font-size: 18px; color: var(--text-muted); margin-bottom: 30px; line-height: 1.8;">
+                    Syvn, altın rengi tonları ve vintage tasarımıyla göz dolduran eğlenceli bir kart oyunudur. İster tek
+                    başınıza AI'a karşı zekanızı test edin, isterseniz çevrimiçi odalarda arkadaşlarınızla kıyasıya
+                    rekabet edin!
+                </p>
+
+                <div class="feature-list" style="margin-bottom: 35px;">
+                    <div class="feature-item" style="display: flex; gap: 20px; margin-bottom: 24px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(212, 175, 55, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-robot" style="color: #d4af37; font-size: 18px;"></i>
+                        </div>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">Yapay Zeka Modu
+                            </h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">Gelişmiş
+                                AI rakibe karşı tek oyunculu modda stratejinizi geliştirin.</p>
+                        </div>
+                    </div>
+                    <div class="feature-item" style="display: flex; gap: 20px; margin-bottom: 24px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(212, 175, 55, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-users" style="color: #d4af37; font-size: 18px;"></i>
+                        </div>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">Çevrimiçi (Online)
+                            </h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">
+                                Arkadaşlarınızla veya diğer oyuncularla gerçek zamanlı multiplayer odalara katılın.</p>
+                        </div>
+                    </div>
+                    <div class="feature-item" style="display: flex; gap: 20px;">
+                        <div class="feature-icon-small"
+                            style="min-width: 45px; height: 45px; background: rgba(212, 175, 55, 0.1); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                            <i class="fas fa-gem" style="color: #d4af37; font-size: 18px;"></i>
+                        </div>
+                        <div>
+                            <h4 style="margin: 0 0 5px 0; font-size: 17px; color: var(--text-main);">Zarif Arayüz</h4>
+                            <p style="margin: 0; font-size: 14px; color: var(--text-muted); line-height: 1.5;">Oyun
+                                deneyiminizi taçlandıran premium, göz yormayan nostaljik tasarım.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="text-align: center; margin-top: 20px;">
+                    <a href="#" class="btn-cta btn-pulse"
+                        style="display: inline-block; width: 100%; max-width: 400px; background: linear-gradient(135deg, #f9d423 0%, #d4af37 100%);">
+                        Yakında App Store'da
+                    </a>
+                    <div style="margin-top: 15px;">
+                        <div style="display: flex; justify-content: center; gap: 20px;">
+                            <a href="privacy-syvn"
+                                style="color: var(--text-muted); text-decoration: none; font-size: 13px; font-weight: 500; transition: var(--transition); border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 2px;"
+                                onmouseover="this.style.color='#d4af37'; this.style.borderColor='#d4af37'"
+                                onmouseout="this.style.color='var(--text-muted)'; this.style.borderColor='rgba(255, 255, 255, 0.1)'">
+                                Gizlilik Politikası
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer style="padding: 100px 0; border-top: 1px solid var(--card-border); text-align: center;">
