chore: refine privacy policy by removing redundant variables, child privacy section, and abstracting technical details

--- a/privacy-syvn.html
+++ b/privacy-syvn.html
@@ -123,11 +123,11 @@
                 </p>
             </div>
 
-            <p><strong>SYVN</strong> ("Uygulama") mobil uygulamasını tercih ettiğiniz için teşekkür ederiz. Uygulama
-                geliştiricisi ("Geliştirici", "Biz" veya "Bizi") olarak, kullanıcılarımızın ("Siz" veya "Kullanıcı")
-                mahremiyetine ve kişisel verilerinin güvenliğine en üst düzeyde önem atfetmekteyiz. İşbu Gizlilik
-                Politikası, uygulamamızı kullanımınız sırasında hangi verilerin toplandığını, bu verilerin hangi
-                amaçlarla kullanıldığını ve nasıl muhafaza edildiğini şeffaf bir şekilde ortaya koymaktadır.</p>
+            <p><strong>SYVN</strong> mobil uygulamasını tercih ettiğiniz için teşekkür ederiz. Uygulama geliştiricisi
+                olarak, kullanıcılarımızın mahremiyetine ve kişisel verilerinin güvenliğine en üst düzeyde önem
+                atfetmekteyiz. İşbu Gizlilik Politikası, uygulamamızı kullanımınız sırasında hangi verilerin
+                toplandığını, bu verilerin hangi amaçlarla kullanıldığını ve nasıl muhafaza edildiğini şeffaf bir
+                şekilde ortaya koymaktadır.</p>
 
             <p>Hizmetlerimizi (SYVN) kullanarak, bilgilerin işbu politika çerçevesinde toplanmasını ve işlenmesini kabul
                 etmiş sayılırsınız.</p>
@@ -137,9 +137,9 @@
                 gerekliliklerle sınırlı, minimum düzeyde veri işlemektedir:</p>
 
             <h3>A. Otomatik Olarak Toplanan Anonim Veriler</h3>
-            <p>Uygulama kullanımı esnasında, altyapı hizmeti aldığımız güvenilir üçüncü taraf sağlayıcılar (ör. Google
-                Firebase, çeşitli Reklam Ağları) aracılığıyla cihazınıza dair birtakım teknik ve anonim veriler otomatik
-                olarak toplanabilmektedir. Bu veriler başlıca şunları kapsar:</p>
+            <p>Uygulama kullanımı esnasında, altyapı hizmeti aldığımız güvenilir üçüncü taraf sağlayıcılar aracılığıyla
+                cihazınıza dair birtakım teknik ve anonim veriler otomatik olarak toplanabilmektedir. Bu veriler başlıca
+                şunları kapsar:</p>
             <ul>
                 <li>İnternet Protokolü (IP) adresi</li>
                 <li>Cihaz modeli, işletim sistemi ve sürüm bilgileri (iOS sürümü vb.)</li>
@@ -156,7 +156,8 @@
                     silinir.</li>
                 <li><strong>SYVN,</strong> isim, soyisim, e-posta adresi, fiziksel adres, telefon numarası veya finansal
                     ödeme araçları (kredi kartı vb.) gibi nitelikli ya da doğrudan tanımlanabilir kişisel verileri (PII)
-                    <strong>hiçbir koşulda talep etmez ve toplamaz.</strong></li>
+                    <strong>hiçbir koşulda talep etmez ve toplamaz.</strong>
+                </li>
             </ul>
 
             <h2>2. Üçüncü Taraf Entegrasyonları ve Hizmet Sağlayıcılar</h2>
@@ -164,11 +165,9 @@
                 güvenlik sunan üçüncü taraf servislerle entegre çalışmaktayız. İlgili servislerin kendi bağımsız
                 güvenlik prensipleri mevcuttur:</p>
             <ul>
-                <li><strong>Google Firebase Altyapısı (Realtime Database, Firestore, Analytics vb.):</strong> Anlık
-                    (real-time) oyuncu eşleştirmeleri, oturum senkronizasyon optimizasyonu, olası bağlantı hatalarının
-                    ve yazılım çökmelerinin tespiti amacıyla aktif olarak kullanılmaktadır. (Detaylı bilgi için: <a
-                        href="https://policies.google.com/privacy" target="_blank"
-                        style="color: #d4af37; text-decoration: underline;">Google Gizlilik Politikası</a>)</li>
+                <li><strong>Temel Altyapı ve Sunucu Hizmetleri:</strong> Anlık (real-time) oyuncu eşleştirmeleri, oturum
+                    senkronizasyon optimizasyonu, olası bağlantı hatalarının ve yazılım çökmelerinin tespiti amacıyla
+                    sektör standartlarında güvenilir altyapı hizmetleri aktif olarak kullanılmaktadır.</li>
                 <li><strong>Mobil Reklam Platformları (aktif olması halinde):</strong> Hizmetin ücretsiz ve erişilebilir
                     kalmasını sağlamak adına, anonimleştirilmiş cihaz reklam kimlikleri aracılığıyla bağlamsal veya
                     kişiselleştirilmiş (açık rızanız doğrultusunda) reklam sunumu yapılabilir.</li>
@@ -210,16 +209,7 @@
                 yüz) güvenlik veya erişilemezlik garantisi sunamayacağının bilincinde olarak; mevcut en iyi siber
                 güvenlik pratiklerini ve makul seviyedeki koruma mekanizmalarını kararlılıkla uygulamaktayız.</p>
 
-            <h2>6. Reşit Olmayanların (Çocukların) Gizliliği</h2>
-            <p>Uygulamamız geniş kitlelere keyifli bir deneyim sunmayı amaçlar niteliktedir. Ancak platformumuz, yasalar
-                gereği 13 yaşından (bazı yargı bölgelerinde ise 16 yaşından) küçük bireylerden bilinçli veya planlı
-                olarak hiçbir surette tanımlanabilir kişisel veri hasadı yapmamaktadır. Eğlence kurgusu gereği
-                kullanılan geçici "Takma Adların" (Nickname) kişisel bir veri veya dijital ayak izi teşkil etmemesinden
-                ötürü sistemde veri eşleştirmesi oluşmaz. Ebeveynler, çocuklarının sistemimize bilmeyerek kişisel bir
-                veri bıraktığından şüphe duymaları hâlinde, kayıtların incelenmesi için iletişim kanallarımızdan bize
-                ulaşabilirler.</p>
-
-            <h2>7. Veri Muhafaza ve İmha Stratejisi</h2>
+            <h2>6. Veri Muhafaza ve İmha Stratejisi</h2>
             <p>Uygulama modeli gereği kalıcı bir kullanıcı hesabı, ilerleme eşitlemesi veya bulut (cloud) kullanıcı
                 profillemesi sistemi bulunmamaktadır. Çevrimiçi oyun dinamiği süresince atanan odalardaki tüm anlık
                 metrikler (skor durumu, takma ad, sıra takibi) eşzamanlı veritabanımızda son derece asgari bir süreyle
@@ -227,7 +217,7 @@
                 eşzamanlı veritabanı verileri kalıcı bir ize mahal vermeksizin derhal silinir veya tahrip işlemiyle
                 üzerine yazılır.</p>
 
-            <h2>8. Politika Güncellemeleri ve Revizyon</h2>
+            <h2>7. Politika Güncellemeleri ve Revizyon</h2>
             <p>Dijital dönüşümler, yasal mevzuat yükümlülükleri ve uygulamanın işleyiş mimarisine eklenebilecek yeni
                 modüller doğrultusunda işbu Gizlilik Politikası metnini çeşitli zamanlarda tadil etme hakkımızı saklı
                 tutarız. Doküman içerisinde revizyon yapıldığı takdirde, metnin meşru ve bağlayıcı olan yeni hâli
@@ -235,7 +225,7 @@
                 edilir. Politikamızda vuku bulacak revizyonların bağlayıcılığı uygulamaya erişim sağlamaya devam
                 edilerek kabul edilmiş sayılır.</p>
 
-            <h2>9. Resmi İrtibat Kanalları</h2>
+            <h2>8. Resmi İrtibat Kanalları</h2>
             <p>Gizlilik beyannamemiz, toplanan teknik veriler ve uyguladığımız standartlar hakkındaki tüm yasal
                 sorularınız, tereddütleriniz veya görüşleriniz için aşağıda paylaşılmış olan kanaldan bizimle her daim
                 iletişime geçebilirsiniz:</p>
