--- a/apps.html
+++ b/apps.html
@@ -137,10 +137,37 @@
         </section>
 
         <!-- Syvn App Showcase -->
+        <style>
+            .syvn-mockup-1 {
+                width: 270px;
+                transform: rotate(-10deg) translateX(40px) translateY(5px);
+                z-index: 2;
+                transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+                filter: drop-shadow(-30px 40px 50px rgba(0, 0, 0, 0.6));
+            }
+
+            .syvn-mockup-2 {
+                width: 240px;
+                transform: rotate(12deg) translateX(-40px) translateY(-15px);
+                z-index: 1;
+                opacity: 0.6;
+                transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+                filter: drop-shadow(30px 40px 50px rgba(0, 0, 0, 0.6));
+            }
+
+            .app-images:hover .syvn-mockup-1 {
+                transform: rotate(-5deg) translateX(20px) translateY(0);
+            }
+
+            .app-images:hover .syvn-mockup-2 {
+                transform: rotate(6deg) translateX(-20px) translateY(-5px);
+                opacity: 1;
+            }
+        </style>
         <section class="app-showcase animate" style="margin-top: 60px;">
-            <div class="app-images" style="flex: 1.2;">
-                <img src="images/syvn1.png" alt="Syvn App" class="app-img-diag-1" style="width: 250px;">
-                <img src="images/syvn2.png" alt="Syvn Multiplayer" class="app-img-diag-2" style="width: 250px;">
+            <div class="app-images" style="flex: 1.2; position: relative;">
+                <img src="images/syvn1.png" alt="Syvn App" class="syvn-mockup-1">
+                <img src="images/syvn2.png" alt="Syvn Multiplayer" class="syvn-mockup-2">
             </div>
             <div class="app-details" style="text-align: left; flex: 1;">
                 <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
