--- a/apps.html
+++ b/apps.html
@@ -139,20 +139,24 @@
         <!-- Syvn App Showcase -->
         <style>
             .syvn-mockup-1 {
-                width: 270px;
+                width: 260px;
+                border-radius: 42px;
+                border: 2px solid rgba(212, 175, 55, 0.2);
+                box-shadow: -30px 40px 50px rgba(0, 0, 0, 0.6);
                 transform: rotate(-10deg) translateX(40px) translateY(5px);
                 z-index: 2;
                 transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-                filter: drop-shadow(-30px 40px 50px rgba(0, 0, 0, 0.6));
             }
 
             .syvn-mockup-2 {
-                width: 240px;
+                width: 230px;
+                border-radius: 42px;
+                border: 2px solid rgba(212, 175, 55, 0.2);
+                box-shadow: 30px 40px 50px rgba(0, 0, 0, 0.6);
                 transform: rotate(12deg) translateX(-40px) translateY(-15px);
                 z-index: 1;
                 opacity: 0.6;
                 transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-                filter: drop-shadow(30px 40px 50px rgba(0, 0, 0, 0.6));
             }
 
             .app-images:hover .syvn-mockup-1 {
