--- a/apps.html
+++ b/apps.html
@@ -139,32 +139,36 @@
         <!-- Syvn App Showcase -->
         <style>
             .syvn-mockup-1 {
-                width: 260px;
-                border-radius: 42px;
-                border: 2px solid rgba(212, 175, 55, 0.2);
-                box-shadow: -30px 40px 50px rgba(0, 0, 0, 0.6);
-                transform: rotate(-10deg) translateX(40px) translateY(5px);
+                width: 250px;
+                border-radius: 60px;
+                /* Truly oval/capsule like iPhone */
+                border: 1px solid var(--card-border);
+                box-shadow: -30px 40px 70px rgba(0, 0, 0, 0.5);
+                transform: rotate(-15deg) translateX(50px);
                 z-index: 2;
                 transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+                background: var(--card-border);
+                /* Subtle background for transparency */
             }
 
             .syvn-mockup-2 {
-                width: 230px;
-                border-radius: 42px;
-                border: 2px solid rgba(212, 175, 55, 0.2);
-                box-shadow: 30px 40px 50px rgba(0, 0, 0, 0.6);
-                transform: rotate(12deg) translateX(-40px) translateY(-15px);
+                width: 250px;
+                border-radius: 60px;
+                border: 1px solid var(--card-border);
+                box-shadow: 30px 40px 70px rgba(0, 0, 0, 0.5);
+                transform: rotate(10deg) translateX(-50px);
                 z-index: 1;
-                opacity: 0.6;
+                opacity: 0.7;
                 transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+                background: var(--card-border);
             }
 
             .app-images:hover .syvn-mockup-1 {
-                transform: rotate(-5deg) translateX(20px) translateY(0);
+                transform: rotate(-5deg) translateX(10px);
             }
 
             .app-images:hover .syvn-mockup-2 {
-                transform: rotate(6deg) translateX(-20px) translateY(-5px);
+                transform: rotate(5deg) translateX(-10px);
                 opacity: 1;
             }
         </style>
