feat(styles): add gradient slide animation and signature line for Syvn and Vynto titles

--- a/apps.html
+++ b/apps.html
@@ -183,8 +183,7 @@
                     <span style="font-weight: 800; color: #d4af37; letter-spacing: 1px;">Sadece iOS İçin</span>
                 </div>
                 <h2 style="font-size: 64px; margin-bottom: 10px;">
-                    <span
-                        style="background: linear-gradient(135deg, #f9d423 0%, #d4af37 100%); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">Syvn</span>
+                    <span class="syvn-text">Syvn</span>
                 </h2>
                 <p
                     style="color: #d4af37; font-weight: 800; text-transform: uppercase; letter-spacing: 4px; font-size: 14px; margin-bottom: 30px;">
